# Snake-Evolutivo-Algoritmo-Genetico

./: pyproject.toml  run_experiments.py  simple_test.py  snake_experiments.py  snakepy.py  test_snake.py
